--- a/index.html
+++ b/index.html
@@ -10,51 +10,44 @@
 
 <body>
 
-    <header>
-        <h1>ยินดีต้อนรับค้าบบ</h1>
-    </header>
+
 
     <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
     </nav>
-
+    <header>
+        <h1 style="font-size: 45px;">ยินดีต้อนรับค้าบ <br>มาทำควาทรู้จักกับสารายของ AI เห้ย สาระของ AI</h1>
+    </header>
     <section class="content">
         <div class="box">
-            <h2>ข้อมูลเกี้ยวกับผม</h2>
-            <p style="text-align: left; margin-left: 20px;">
-                ผมชื่อซุล ซุลกิฟลี อาแว <br>
-                เป็นนักศึกษาจากวิทยาลัยการอาชีพปัตตานี<br>
-                ระดับชั้น: ปวส.2<br>
-                เลขที่: 67319010002<br>
-                ตอนนี้กำลังเรียนรู้เกี่ยวกับ AI Mentor+ เป็นการเรียนรู้โดยใช้ AI เป็นอาจารย์ในการสอน
+            <h2>การเรียนรู้กับ AI</h2>
+            <p>
+                ปัจจุบัน AI มีบทบาทสำคัญในการศึกษา ทำให้ผู้เรียนสามารถเข้าถึงความรู้ได้สะดวก รวดเร็ว และมีประสิทธิภาพมากขึ้น
+                AI ไม่ได้เป็นเพียงเครื่องมือในการสอน แต่ยังช่วยให้กระบวนการเรียนรู้เป็นไปอย่างเหมาะสมกับแต่ละบุคคล 
+                <strong>ผ่านการวิเคราะห์ข้อมูลพฤติกรรมการเรียนของผู้ใช้</strong> และนำเสนอเนื้อหาที่สอดคล้องกับระดับความเข้าใจ
             </p>
-        </div>
-        <div class="box">
-            <h2>สิ่งที่ได้รับจากการเรียนกับ AI </h2>
-            <p style="text-align: left; margin-left: 20px;">
-                - เรียนรู้ได้ทุกที่ ทุกเวลา<br>
-                - ปรับเนื้อหาให้เหมาะกับผู้เรียน<br>
-                - ได้คำตอบและคำแนะนำรวดเร็ว<br>
-                - ฝึกคิดวิเคราะห์จากคำถามโต้ตอบ<br>
-                - เพิ่มทักษะการใช้เทคโนโลยีในการเรียนรู้</p>
-        </div>
-        <div class="box">
-            <h2>เรียนกับ AI จะเข้าใจไหม</h2>
-            <p style="text-align: left; margin-left: px;">
-                AI ช่วยให้การเรียนมีประสิทธิภาพมากขึ้น<br>
-                - เรียนรู้ได้เร็วขึ้น เพราะ AI ตอบคำถามได้ทันที<br>
-                - ปรับตามระดับผู้เรียน ทำให้เข้าใจง่ายขึ้น<br>
-                - ช่วยฝึกวิเคราะห์ ผ่านคำถาม-คำตอบที่ท้าทาย<br>
-                - สะดวกและเข้าถึงได้ ไม่จำกัดเวลาและสถานที่<br>
-                AI ไม่ได้มาแทนที่อาจารย์ แต่ช่วยให้การเรียนรู้ดีขึ้นสดวกง่ายขึ้น 😊</p>
+
+            <h2>ข้อดีของการเรียนรู้กับ AI</h2>
+            <ul>
+                <li> เรียนรู้ได้ทุกที่ ทุกเวลา ไม่จำเป็นต้องเข้าเรียนในห้องเรียนแบบเดิม สามารถเรียนผ่านแพลตฟอร์มต่าง ๆ
+                    ได้ตามสะดวก</li>
+                    <li> ปรับเนื้อหาให้เหมาะกับผู้เรียน AI สามารถวิเคราะห์ระดับความเข้าใจของผู้เรียน
+                    และปรับเนื้อหาให้เหมาะสมกับความสามารถของแต่ละคน></li>
+                    <li> ตอบคำถามได้อย่างรวดเร็ว ไม่ต้องรออาจารย์หรือค้นหาคำตอบเอง AI
+                    สามารถให้คำตอบและอธิบายเพิ่มเติมได้ทันที</li>
+                    <li> ฝึกทักษะการคิดวิเคราะห์ ผ่านคำถามโต้ตอบและแบบฝึกหัดที่ช่วยให้ผู้เรียนได้พัฒนากระบวนการคิด</li>
+                    <li> ช่วยให้เข้าถึงความรู้ด้านเทคโนโลยี การใช้ AI
+                    ในการศึกษาเป็นการเปิดโอกาสให้ผู้เรียนคุ้นเคยกับเทคโนโลยีและนำไปใช้พัฒนาตนเอง</li>
+            </ul>
         </div>
     </section>
 
     <footer>
-        <p>© 2024 Zultekasi - AI </p>
+        <p>© 2024 Zultekasi - AI</p>
     </footer>
 
 </body>
+
 </html>
