--- a/about.html
+++ b/about.html
@@ -12,9 +12,10 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="about.html" class="active">About</a>
         <a href="contact.html">Contact</a>
     </nav>
+    
     <header>
         <h1>เกี่ยวกับฉัน</h1>
     </header>
