--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,9 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html" class="active">Contact</a>
     </nav>
+    
     <header>
         <h1>ช่องทางการติดต่อ</h1>
     </header>
