--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
 
     <nav>
-        <a href="index.html">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
+    
     <header>
         <h1 style="font-size: 45px;">ยินดีต้อนรับค้าบ <br>มาทำควาทรู้จักกับสารายของ AI เห้ย สาระของ AI</h1>
     </header>
