--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
+    <button class="menu-toggle">☰</button>
 
-    <nav>
+    <nav class="nav-menu">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html" class="active">Contact</a>
@@ -39,6 +40,8 @@
     <footer>
         <p>© 2024 Zultekasi - AI</p>
     </footer>
+
+    <script src="script.js"></script>
 
 </body>
 
