--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 
 <body>
 
+    <button class="menu-toggle">☰</button>
 
 
-    <nav>
+
+    <nav class="nav-menu">
         <a href="index.html" class="active">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
-    
+
     <header>
         <h1 style="font-size: 45px;">ยินดีต้อนรับค้าบ <br>มาทำควาทรู้จักกับสารายของ AI เห้ย สาระของ AI</h1>
     </header>
@@ -25,21 +27,23 @@
         <div class="box">
             <h2>การเรียนรู้กับ AI</h2>
             <p>
-                ปัจจุบัน AI มีบทบาทสำคัญในการศึกษา ทำให้ผู้เรียนสามารถเข้าถึงความรู้ได้สะดวก รวดเร็ว และมีประสิทธิภาพมากขึ้น
-                AI ไม่ได้เป็นเพียงเครื่องมือในการสอน แต่ยังช่วยให้กระบวนการเรียนรู้เป็นไปอย่างเหมาะสมกับแต่ละบุคคล 
-                <strong>ผ่านการวิเคราะห์ข้อมูลพฤติกรรมการเรียนของผู้ใช้</strong> และนำเสนอเนื้อหาที่สอดคล้องกับระดับความเข้าใจ
+                ปัจจุบัน AI มีบทบาทสำคัญในการศึกษา ทำให้ผู้เรียนสามารถเข้าถึงความรู้ได้สะดวก รวดเร็ว
+                และมีประสิทธิภาพมากขึ้น
+                AI ไม่ได้เป็นเพียงเครื่องมือในการสอน แต่ยังช่วยให้กระบวนการเรียนรู้เป็นไปอย่างเหมาะสมกับแต่ละบุคคล
+                <strong>ผ่านการวิเคราะห์ข้อมูลพฤติกรรมการเรียนของผู้ใช้</strong>
+                และนำเสนอเนื้อหาที่สอดคล้องกับระดับความเข้าใจ
             </p>
 
             <h2>ข้อดีของการเรียนรู้กับ AI</h2>
             <ul>
                 <li> เรียนรู้ได้ทุกที่ ทุกเวลา ไม่จำเป็นต้องเข้าเรียนในห้องเรียนแบบเดิม สามารถเรียนผ่านแพลตฟอร์มต่าง ๆ
                     ได้ตามสะดวก</li>
-                    <li> ปรับเนื้อหาให้เหมาะกับผู้เรียน AI สามารถวิเคราะห์ระดับความเข้าใจของผู้เรียน
+                <li> ปรับเนื้อหาให้เหมาะกับผู้เรียน AI สามารถวิเคราะห์ระดับความเข้าใจของผู้เรียน
                     และปรับเนื้อหาให้เหมาะสมกับความสามารถของแต่ละคน></li>
-                    <li> ตอบคำถามได้อย่างรวดเร็ว ไม่ต้องรออาจารย์หรือค้นหาคำตอบเอง AI
+                <li> ตอบคำถามได้อย่างรวดเร็ว ไม่ต้องรออาจารย์หรือค้นหาคำตอบเอง AI
                     สามารถให้คำตอบและอธิบายเพิ่มเติมได้ทันที</li>
-                    <li> ฝึกทักษะการคิดวิเคราะห์ ผ่านคำถามโต้ตอบและแบบฝึกหัดที่ช่วยให้ผู้เรียนได้พัฒนากระบวนการคิด</li>
-                    <li> ช่วยให้เข้าถึงความรู้ด้านเทคโนโลยี การใช้ AI
+                <li> ฝึกทักษะการคิดวิเคราะห์ ผ่านคำถามโต้ตอบและแบบฝึกหัดที่ช่วยให้ผู้เรียนได้พัฒนากระบวนการคิด</li>
+                <li> ช่วยให้เข้าถึงความรู้ด้านเทคโนโลยี การใช้ AI
                     ในการศึกษาเป็นการเปิดโอกาสให้ผู้เรียนคุ้นเคยกับเทคโนโลยีและนำไปใช้พัฒนาตนเอง</li>
             </ul>
         </div>
@@ -48,6 +52,8 @@
     <footer>
         <p>© 2024 Zultekasi - AI</p>
     </footer>
+
+    <script src="script.js"></script>
 
 </body>
 
