--- a/about.html
+++ b/about.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
+    <button class="menu-toggle">☰</button>
 
-    <nav>
+    <nav class="nav-menu">
         <a href="index.html">Home</a>
         <a href="about.html" class="active">About</a>
         <a href="contact.html">Contact</a>
@@ -36,6 +37,7 @@
     <footer>
         <p>© 2024 Zultekasi - AI</p>
     </footer>
+    <script src="script.js"></script>
 
 </body>
 
